# cloysterhpc

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.cmake  Doxyfile  LICENSE  Makefile  ProjectOptions.cmake  README.md  README_DOCS.md  Vagrantfile  buildrpm.sh  cloyster.repo.example  cluster.cpp  cluster.h  cluster.hpp  conanfile.py  conanfile.txt  connection.cpp  connection.h  const.h  const.hpp  controller.cpp  controller.h  datamodel.txt  deadcode.cpp  error.h  error.hpp  example.answerfile.ini  functions.cpp  functions.h  functions.hpp  generateDummyFiles.sh  headnode.cpp  (+36 more)
.github/workflows/: clang-format-check.yml  codeql-analysis.yml  test.yml
ansible/: Dockerfile  README.md  Vagrantfile  acceptance.sh  ansible.cfg  config.yml  fix-ansible-test.patch  setup.yml
ansible/roles/cloyster_setup/: Vagrantfile
cmake/: Addstdcppfs.cmake  CPackProperties.cmake  Cache.cmake  CommonLibraries.cmake  CompilerWarnings.cmake  Conan.cmake  Cuda.cmake  Doxygen.cmake  Findnewt.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  _FORTIFY_SOURCE.hpp  disableBuildsOnSourceDir.cmake
configured_files/: CMakeLists.txt  config.hpp.in
docSrc/: mkdocs.yml
docSrc/docs/: about.md  contributing.md  developers.md  index.md  userguide.md
docSrc/docs/css/: cloyster.css
docs/source/: conf.py  index.rst
docs/source/files/: answerfile.ini.example
docs/source/overview/: index.rst  sys_os_requirements.rst
fuzz_test/: CMakeLists.txt
include/cloysterhpc/: NFS.h  answerfile.h  cloyster.h  cluster.h  concepts.h  connection.h  const.h  cpu.h  daemon_handler.h  dbus_client.h  diskImage.h  file.h  functions.h  hardware.h  headnode.h  inifile.h  inifile.h.disabled  lvm.h  messagebus.h  network.h  node.h  ofed.h  os.h  repos.h  runner.h  server.h  tempdir.h  tests.h  verification.h
include/cloysterhpc/mailsystem/: postfix.h
include/cloysterhpc/models/: answerfile.h  cluster.h  cpu.h  elclonerepo.h  headnode.h  node.h  os.h  pbs.h  queuesystem.h  server.h  slurm.h
include/cloysterhpc/patterns/: singleton.h  strongtypedef.h  wrapper.h
include/cloysterhpc/presenter/: Presenter.h  PresenterGeneralSettings.h  PresenterHostId.h  PresenterInfiniband.h  PresenterInstall.h  (+10 more)
include/testing/: test_message_bus.h
oldsrc/: deadcode.cpp.disabled  presenter.cpp.disabled  presenter.h  presenterLocaleSelection.cpp.disabled  view.h  viewSubscriber.h  welcomePresenter.cpp.disabled  welcomePresenter.h
repos/: alma.conf  oracle.conf  repos.conf  rhel.conf  rocky-upstream.conf  rocky-vault.conf
rpmspecs/: opencattus.spec
src/: CMakeLists.txt  NFS.cpp  NFS.h  answerfile.cpp  cloyster.cpp  cloyster.h  cluster.cpp  cluster.h  connection.cpp  connection.h  const.h  cpu.cpp  cpu.h  daemon_handler.cpp  dbus_client.cpp  discImage.cpp  discImage.h  diskImage.cpp  diskImage.h  functions.cpp  functions.h  hardware.cpp  headnode.cpp  headnode.h  inifile.cpp  inifile.cpp.disabled  inifile.h  lvm.cpp  main.cpp  messages.h  network.cpp  network.h  node.cpp  node.h  ofed.cpp  ofed.h  options.cpp  os.cpp  os.h  presenter.h  (+13 more)
src/include/: .clang-format  ConvertUTF.h  SimpleIni.h  i18n-cpp.hpp  magic_enum.hpp
src/mailsystem/: postfix.cpp  postfix.h
src/models/: answerfile.cpp  cluster.cpp  cpu.cpp  headnode.cpp  node.cpp  os.cpp  pbs.cpp  queuesystem.cpp  server.cpp  slurm.cpp
src/presenter/: Presenter.h  PresenterGeneralSettings.cpp  PresenterGeneralSettings.h  PresenterHostId.cpp  PresenterHostId.h  PresenterInfiniband.cpp  PresenterInfiniband.h  PresenterInstall.cpp  PresenterInstall.h  PresenterInstructions.cpp  PresenterInstructions.h  PresenterLocale.cpp  PresenterLocale.h  PresenterMailSystem.cpp  PresenterMailSystem.h  PresenterNetwork.cpp  PresenterNetwork.h  PresenterNodes.cpp  PresenterNodes.h  PresenterNodesOperationalSystem.cpp  PresenterNodesOperationalSystem.h  PresenterQueueSystem.cpp  PresenterQueueSystem.h  PresenterRepository.cpp  PresenterTime.cpp  PresenterTime.h  PresenterTimeArea.cpp  PresenterTimeArea.h  PresenterWelcome.cpp  PresenterWelcome.h  presenter.cpp  presenter.h  presenterBase.cpp  presenterBase.h  presenterInstall.cpp  presenterInstall.h  presenterNetwork.cpp  presenterNetwork.h  presenterWelcome.cpp  presenterWelcome.h
src/queuesystem/: pbs.cpp  pbs.h  queuesystem.cpp  queuesystem.h  slurm.cpp  slurm.h
src/services/: IService.cpp  IService.h  ansible.cpp  bmc.cpp  bmc.h  dnf.cpp  execution.h  fail2ban.cpp  files.cpp  init.cpp  locale.cpp  log.cpp  log.h  nvhpc.cpp  options.cpp  osservice.cpp  provisioner.h  repo.cpp  repofile.cpp  repos.cpp  runner.cpp  scriptbuilder.cpp  selinux.cpp  shell.cpp  shell.h  timezone.cpp  timezone.h  xcat.cpp  xcat.h
src/services/ansible/roles/: audit.cpp  base.cpp
src/tmpl/: slurm.conf.tmpl
src/tools/: nvhpc.cpp
src/view/: newt.cpp  newt.h  newtFieldMenu.cpp  newtFieldMenu.h  newtListMenu.cpp  newtListMenu.h  newtMessage.cpp  newtMessage.h  newtOkCancelMessage.cpp  newtViewBase.cpp  newtViewBase.h  newtViewFieldMenu.cpp  newtViewFieldMenu.h  newtViewListMenu.cpp  newtViewListMenu.h  newtViewMessage.cpp  newtViewMessage.h  newtViewYesNoQuestion.cpp  newtViewYesNoQuestion.h  newtYesNoQuestion.cpp  newtYesNoQuestion.h  view.h
test/: CMakeLists.txt  diskImage.cpp  inifile.cpp  main.cpp  network.cpp  test_message_bus.cpp  tests.cpp
test/sample/: checksum.iso  inifile.ini
test/sample/answerfile/: rocky9-base.ini  unordered.answerfile.ini  wrong.answerfile.ini
test/source/: main.cpp  network.cpp
test/src/: network.cpp
vagrant/: README.md  Vagrantfile  setupVagrant.sh
vagrant/include/: alma-8.answerfile.ini  alma-9.answerfile.ini  oracle-8.answerfile.ini  oracle-9.answerfile.ini  rhel-8.answerfile.ini  rhel-9.answerfile.ini  rocky-8.answerfile.ini  rocky-9.answerfile.ini
vagrant/provision/: alma.sh  rhel-8-based.sh  rhel-8.sh  rhel-9.sh
(+93 files in other folders)
